objects/Note__c/fields/ICB_Request__c.field-meta.xml
<CustomField>
    <fullName>ICB_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field from Note object to ICB Request object</description>
    <label>ICB Request</label>
    <referenceTo>ICB__c</referenceTo>
    <relationshipLabel>Notes</relationshipLabel>
    <relationshipName>Notes</relationshipName>
    <type>Lookup</type>
</CustomField>