objects/Note__c/fields/OnyxOpportunityID__c.field-meta.xml
<CustomField>
    <fullName>OnyxOpportunityID__c</fullName>
    <externalId>true</externalId>
    <label>OnyxOpportunityID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>