objects/Note__c/fields/Private__c.field-meta.xml
<CustomField>
    <fullName>Private__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked only your manager and above will see this note.</inlineHelpText>
    <label>Private</label>
    <type>Checkbox</type>
</CustomField>