objects/Note__c/listViews/Agent_Orders_Note.listView-meta.xml
<ListView>
    <fullName>Agent_Orders_Note</fullName>
    <filterScope>Queue</filterScope>
    <label>Agent Orders</label>
    <queue>Agent_Orders</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>